@@ -97,6 +97,8 @@ static recipe *get_empty_formula(void) {
     t->cauldron = NULL;
     t->ingred = NULL;
     t->next = NULL;
+    t->failure_arch = NULL;
+    t->failure_message = NULL;
     return t;
 }
 
@@ -244,6 +246,10 @@ void init_formulae(void) {
             formula->skill = add_string(strchr(cp, ' ')+1);
         } else if (!strncmp(cp, "cauldron", 8)) {
             formula->cauldron = add_string(strchr(cp, ' ')+1);
+        } else if (!strncmp(cp, "failure_arch ", 13)) {
+            formula->failure_arch = add_string(strchr(cp, ' ')+1);
+        } else if (!strncmp(cp, "failure_message ", 16)) {
+            formula->failure_message = add_string(strchr(cp, ' ')+1);
         } else
             LOG(llevError, "Unknown input in file %s: %s\n", filename, buf);
     }
